<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextBooks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_books">ShowBooks</string>
    <string name="show_books">Show Books</string>
    <string name="add_book">Add Book</string>
    <string name="add_book_hint">Please enter book title</string>
    <string name="add_author_hint">Please enter book author</string>
    <string name="exam_text">Exam 7 April 2015</string>
    <string name="book_list_empty">There are no books</string>

</resources>
