<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/add_book_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_book_hint"/>

    <EditText
        android:id="@+id/add_author_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_author_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_book"
        android:id="@+id/add_book_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_books"
        android:id="@+id/show_book_button"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/exam_text"
        android:id="@+id/exam_textview"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
